--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -46,29 +46,36 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
 /* Set every element's box-sizing to border-box */
 * {
     box-sizing: border-box;
 }
-
 html, body {
     height: 100%;
     font-family: 'Lacquer', 'Titillium Web', sans-serif;
 }
-
 h1, h2, h3, h4, h5 {
     font-family: 'Tomorrow', 'Bangers', cursive;
     letter-spacing: 1px;
     margin-bottom: 15px;
 }
-
 /* My code starts here! */
 body{
-    margin: 40px 5% 60px;
+    margin-left: 20%;
+    width: 60%;
+    line-height: 1.5;
 }
-
+h1, h3{
+    font-weight: bolder;
+}
 /* Header */
+header{
+	display: flex;
+    justify-content: space-around;
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 5%;
+}
 header a{
 	text-decoration: none;
 	color: slategray;
@@ -78,15 +85,10 @@ header nav{
     display: flex;
     justify-content: space-between;
 }
-header{
-	display: flex;
-	justify-content: space-around;
-}
 header nav .headcol{
 	display: flex;
 	justify-content: space-between;
 }
-
 /* Subhead */
 .subhead{
     margin: 2% 0;
@@ -104,17 +106,70 @@ header nav .headcol{
 .subhead h1{
     font-size: 24px;
 }
-
 /* Main Content */
 .maincontent{
     border-top: 1px solid black;
     border-bottom: 2px solid black;
     padding: 2% 0;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 4%; 
+    width: 80%;
+    margin-left: 10%;
 }
-
-
+.maincontent p{
+    font-size: 14px;
+}
+.maincontent .row1{
+    display: flex;
+    justify-content: space-between;
+    margin: 2% 0;
+}
+.maincontent .row2{
+    display: flex;
+    justify-content: space-between;
+    margin: 2% 0;
+}
+.maincontent .row3{
+    display: flex;
+    justify-content: space-between;
+    margin: 2% 0;
+}
+.griditem{
+    width: 425px;
+    height: 250px;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 2%;
+    background-color: lightgray;
+}
+.griditem button{
+    width: 150px;
+    height: 35px;
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid black;
+}
+/* Sub Content */
+.subcontent{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    margin-left: 10%;
+    margin-bottom: 5%;
+}
+.sc-div{
+    width: 45%;
+}
+.sc-div ul{
+    list-style-type: square;
+    margin-left: 5%;
+}
 /* Footer */
 footer{
     text-align: center;
     font-weight: bold;
+    margin: 2%;
 }
